--- a/create_nft_swap_formx.html
+++ b/create_nft_swap_formx.html
@@ -141,6 +141,11 @@ const abi = [
 	{
 		"inputs": [
 			{
+				"internalType": "uint256",
+				"name": "num",
+				"type": "uint256"
+			},
+			{
 				"internalType": "address",
 				"name": "_offeror",
 				"type": "address"
@@ -462,7 +467,13 @@ const abi = [
 		"type": "function"
 	},
 	{
-		"inputs": [],
+		"inputs": [
+			{
+				"internalType": "uint256",
+				"name": "num",
+				"type": "uint256"
+			}
+		],
 		"name": "withdraw_nft",
 		"outputs": [],
 		"stateMutability": "payable",
@@ -564,6 +575,30 @@ const abi = [
 			}
 		],
 		"name": "debt_obligation_list",
+		"outputs": [
+			{
+				"internalType": "bool",
+				"name": "",
+				"type": "bool"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			},
+			{
+				"internalType": "address",
+				"name": "",
+				"type": "address"
+			}
+		],
+		"name": "debt_obligation_listx",
 		"outputs": [
 			{
 				"internalType": "bool",
@@ -931,7 +966,7 @@ const abi = [
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-const contract_address = web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+const contract_address = web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1061,7 +1096,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+	const contract_address = web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1346,7 +1381,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x6840e5063ebc3ae3b3005e81196500a37469445d", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
@@ -1370,7 +1405,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+const contract_address = await web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -1402,7 +1437,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+	const contract_address = web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1439,7 +1474,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+  const contract_address = await web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1476,7 +1511,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+  const contract_address = await web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1495,7 +1530,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+  	const contract_address = await web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1535,7 +1570,7 @@ q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
 
 	await window.ethereum.enable();
-  	const contract_address = await web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+  	const contract_address = await web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1588,7 +1623,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1c27cc20d3d08a9fb2f97d7a55a13947d32ff86c")
+  	const contract_address = await web3.utils.toChecksumAddress("0x6840e5063ebc3ae3b3005e81196500a37469445d")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
