--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -133,7 +133,7 @@ height: 50px;
 //var pwd = document.getElementById("password").value;
 
 function open_window() {
-  var myWindow = window.open("create_nft_swapx.html", "offer trade", "width=800,height=400");
+  var myWindow = window.open("create_nft_swap_form_polygonx.html", "offer trade", "width=600,height=800");
 }             
 
 
