--- a/create_nft_swap_formx.html
+++ b/create_nft_swap_formx.html
@@ -998,7 +998,7 @@ var display = (async function(){
 	
 	const addressCount = await contract_bal.methods.Address_listCount().call();
 	console.log(addressCount);
-	const fee = await contract_bal.methods.Address_fee().call();
+	const fee = await contract_bal.methods.fee().call();
 	console.log(fee);
 	
 	var toAdd = document.createDocumentFragment();
