--- a/create_nft_swap_formx.html
+++ b/create_nft_swap_formx.html
@@ -999,7 +999,7 @@ var display = (async function(){
 	const addressCount = await contract_bal.methods.Address_listCount().call();
 	console.log(addressCount);
 	const fee = await contract_bal.methods.fee().call();
-	console.log(fee);
+	console.log("fee" + fee);
 	
 	var toAdd = document.createDocumentFragment();
 	for (var i = 0; i<=addressCount; i++){
