--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1020,6 +1020,8 @@ var display = (async function(){
 	
 	const addressCount = await contract_bal.methods.Address_listCount().call();
 	console.log(addressCount);
+	const fee = await contract_bal.methods.fee().call();
+	console.log("fee" + fee);
 	
 	var toAdd = document.createDocumentFragment();
 	for (var i = 0; i<=addressCount; i++){
