--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1054,7 +1054,7 @@ var display = (async function(){
 	var fee = await contract_bal.methods.fee().call();
 	console.log("fee" + fee);
 	var num = await contract_bal.methods.last().call();
-	var last = num + 1
+	var last = parseInt(num) + 1
 	console.log("last: " + last);
 	
 	
@@ -1074,7 +1074,7 @@ var display = (async function(){
 	chat.appendChild(newDiv);
 	
 	document.getElementById("r" + i).innerHTML = "account address: " + address;
-	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, 1).call();
+	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy('01', address, 0).call();
 	console.log(contract_ID1)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'rr'+i;
@@ -1091,7 +1091,7 @@ var display = (async function(){
 	console.log(contract_ID1)
 	document.getElementById("rr" + i).innerHTML = "NFT Contract 1: " + contract_ID1;
 	
-	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, 1).call();
+	var tokenID = await contract_bal.methods.tokens_list1xy('01', address, 0).call();
 	console.log(tokenID)
 	
 	
@@ -1139,7 +1139,7 @@ var display = (async function(){
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	
-	var contract_ID2 = await contract_bal.methods.token_contracts_list2x(i, address, 1).call();
+	var contract_ID2 = await contract_bal.methods.token_contracts_list2x('01', address, 0).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
 	//console.log(loan_)
 	var newDiv = document.createElement('div');
@@ -1166,7 +1166,7 @@ var display = (async function(){
 	
 	//document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
-	var tokenID2 = await contract_bal.methods.tokens_list2x(i, address, 1).call();
+	var tokenID2 = await contract_bal.methods.tokens_list2x('01', address, 0).call();
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
