--- a/create_nft_swap_form_polygonx.html
+++ b/create_nft_swap_form_polygonx.html
@@ -1305,7 +1305,8 @@ var acct = (async function(){
 	
 	
 	var num = await contract_bal.methods.last().call();
-	console.log(num);
+	console.log("num: " + num);
+	var n = parseInt(num);
 	
 	console.log(nft_k);
 	console.log(nft_id);
@@ -1313,7 +1314,7 @@ var acct = (async function(){
 	console.log(loan_term);
  	var contract = web3.utils.toChecksumAddress(nft_k);
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, parseInt(num) + 1).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, n + 1).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
