--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1059,7 +1059,7 @@ var display = (async function(){
 	
 	
 	var toAdd = document.createDocumentFragment();
-	for (var i = addressCount-1; i>=0; i--){
+	for (var i = addressCount; i>=0; i--){
 	var address = await contract_bal.methods.address_list(i).call();
 	console.log(address);
 	var chat = document.getElementById("contract_address_ID"); // finds the container
