--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1059,10 +1059,10 @@ var display = (async function(){
 	
 	
 	var toAdd = document.createDocumentFragment();
-	for (var i = 0; i<addressCount; i++){
+	for (var i = 0; i<=addressCount; i++){
 	var address = await contract_bal.methods.address_list(i).call();
 	console.log("address: " + address);
-	console.log(i);
+	console.log( i);
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	
 	
@@ -1075,7 +1075,7 @@ var display = (async function(){
 	chat.appendChild(newDiv);
 	
 	document.getElementById("r" + i).innerHTML = "account address: " + address;
-	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(1, address, 0).call();
+	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, 0).call();
 	console.log(contract_ID1)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'rr'+i;
@@ -1092,7 +1092,7 @@ var display = (async function(){
 	console.log(contract_ID1)
 	document.getElementById("rr" + i).innerHTML = "NFT Contract 1: " + contract_ID1;
 	
-	var tokenID = await contract_bal.methods.tokens_list1xy(1, address, 0).call();
+	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, 0).call();
 	console.log(tokenID)
 	
 	
@@ -1140,7 +1140,7 @@ var display = (async function(){
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	
-	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(1, address, 0).call();
+	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, 0).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
 	//console.log(loan_)
 	var newDiv = document.createElement('div');
@@ -1167,7 +1167,7 @@ var display = (async function(){
 	
 	//document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
-	var tokenID2 = await contract_bal.methods.tokens_list2xy(1, address, 0).call();
+	var tokenID2 = await contract_bal.methods.tokens_list2xy(i, address, 0).call();
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
@@ -1218,7 +1218,7 @@ var display = (async function(){
 	var newBtn = document.createElement('input');
 	newBtn.setAttribute('type', 'button');
 	newBtn.value = "accept trade";
-	newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + 1 + ')');
+	newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + i + ')');
 	console.log('make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')')
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
