--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -1059,7 +1059,7 @@ var display = (async function(){
 	
 	
 	var toAdd = document.createDocumentFragment();
-	for (var i = 1; i<addressCount+2; i++){
+	for (var i = 0; i<addressCount; i++){
 	var address = await contract_bal.methods.address_list(i).call();
 	console.log("address: " + address);
 	console.log( i);
@@ -1069,13 +1069,13 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'q'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = "offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	document.getElementById("q" + i).innerHTML = "offer no: " + i + 1 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	var newDiv = document.createElement('div');
 	newDiv.id = 'r'+i;
 	chat.appendChild(newDiv);
 	
 	document.getElementById("r" + i).innerHTML = "account address: " + address;
-	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(3, address, 0).call();
+	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i+1, address, 0).call();
 	console.log(contract_ID1)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'rr'+i;
@@ -1092,7 +1092,7 @@ var display = (async function(){
 	console.log(contract_ID1)
 	document.getElementById("rr" + i).innerHTML = "NFT Contract 1: " + contract_ID1;
 	
-	var tokenID = await contract_bal.methods.tokens_list1xy(3, address, 0).call();
+	var tokenID = await contract_bal.methods.tokens_list1xy(i+1, address, 0).call();
 	console.log(tokenID)
 	
 	
@@ -1140,7 +1140,7 @@ var display = (async function(){
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	
-	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(3, address, 0).call();
+	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i+1, address, 0).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
 	//console.log(loan_)
 	var newDiv = document.createElement('div');
@@ -1167,7 +1167,7 @@ var display = (async function(){
 	
 	//document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
-	var tokenID2 = await contract_bal.methods.tokens_list2xy(3, address, 0).call();
+	var tokenID2 = await contract_bal.methods.tokens_list2xy(i+1, address, 0).call();
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
@@ -1207,7 +1207,7 @@ var display = (async function(){
 	document.getElementById("v" + i).innerHTML = "NFT Token ID2: " + tokenID2;
 	//var lender = await contract_bal.methods.lender_list(address).call();
 	//console.log(lender)
-	var latest = await contract_bal.methods.debt_obligation_listx(3, address).call();
+	var latest = await contract_bal.methods.debt_obligation_listx(i+1, address).call();
 	var newDiv = document.createElement('div');
 	newDiv.id = 'w'+i;
 	chat.appendChild(newDiv);
